change the design of command center